--- a/locale/settings-revisions.pot
+++ b/locale/settings-revisions.pot
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Settings Revisions\n"
 "POT-Creation-Date: 2013-06-11 23:53-0700\n"
 "PO-Revision-Date: 2013-06-11 23:53-0700\n"
-"Last-Translator: Weston Ruter <weston@x-team.com>\n"
+"Last-Translator: Weston Ruter <weston@xwp.co>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
